# fastapi-boatpro-project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
docker-build/app/: Dockerfile
docs/guides/: frontend-templates.md  frontend-views.md
fastapi-application/: .env.template  alembic.ini  create_fastapi_app.py  database.py  errors_handlers.py  main.py  prestart.sh  run.py  run_main.py
fastapi-application/actions/: create_superuser.py
fastapi-application/alembic/versions/: .keep  2025_07_04_1528-0f14c134bbe1_create_user_table.py  2025_07_07_1503-ac5dbf95a737_create_access_token_table.py  2025_08_01_1821-0e827ca95057_create_product_type_table.py  2025_08_01_1834-f89afcf2f38e_create_boat_table.py  2025_08_01_1843-c856398ed84e_create_outboard_motor_table.py  2025_08_01_1850-2f16d63603aa_create_trailer_table.py  2025_08_04_1735-052243c714f8_add_relationship_in_product_type_and_.py  2025_08_06_1202-8cd850c97cc0_create_imagepath_table.py  2025_08_06_1528-5d8ae16c834d_add_relationship_for_images.py  2025_08_06_2006-6967d0a4331b_create_image_path_table.py  2025_08_07_1908-e2a6b4e9cde8_create_category_table.py  2025_08_07_1919-cb204f959cb2_create_image_path_table.py  (+11 more)
fastapi-application/api/: __init__.py
fastapi-application/core/: config.py
fastapi-application/mailing/: __init__.py  send_email.py  send_email_confirmed.py  send_reset_password.py  send_verification_email.py
fastapi-application/middleware/: __init__.py  custom_rate_limit_middleware.py  security_headers_middleware.py
fastapi-application/templates/: base.html  boat-detail.html  boat_detail.html  boats.html  catalog.html  home.html  index.html  limit-exceeded.html  page-missing.html  reset-password.html  search.html  verification.html
fastapi-application/tests/: README.md  conftest.py
fastapi-application/utils/: __init__.py  case_converter.py  key_builder.py  limiter.py  templates.py
fastapi-application/views/: __init__.py  admin.py  boats.py  catalog.py  change_password.py  favorites.py  home.py  limit_exceeded.py  orders.py  page_missing.py  reset_password.py  search.py  verification.py
src/: config.py  conftest.py  database.py
src/boats/: models.py
src/motors/: models.py
src/trailers/: models.py
(+260 files in other folders)
