[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.13"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
pedantic = {extras = ["email"], version = "^2.1.9"}
pydantic-settings = "^2.10.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
asyncpg = "^0.30.0"
alembic = "^1.16.2"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
pika = "^1.3.2"
pika-stubs = "^0.1.3"
gunicorn = "^23.0.0"
aiohttp = "^3.12.14"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

