[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.13"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
pedantic = {extras = ["email"], version = "^2.1.9"}
pydantic-settings = "^2.10.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
asyncpg = "^0.30.0"
alembic = "^1.16.2"
pika = "^1.3.2"
pika-stubs = "^0.1.3"
gunicorn = "^23.0.0"
aiohttp = "^3.12.14"
jinja2 = "^3.1.6"
python-multipart = "^0.0.21"
aiofiles = "^24.1.0"
pytest = "^8.4.1"
httpx = "^0.28.1"
pytest-asyncio = "^1.1.0"
aiosmtplib = "^4.0.1"
fastapi-cache2 = "^0.2.2"
redis = "^7.0.0"
slowapi = "^0.1.9"
faker = "^37.12.0"
pytest-cov = "^7.0.0"
aiosqlite = "^0.21.0"
yookassa = "^3.8.0"
orjson = "^3.11.5"
fastapi-users = {extras = ["sqlalchemy"], version = "^15.0.3"}

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

